kubernetes/main/apps/flame/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flame
  namespace: default
spec:
  selector:
    app: flame
  ports:
    - port: 5005
      protocol: TCP
      targetPort: http-flame
