kubernetes/main/apps/flame/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flame-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    cert-manager.io/common-name: start.home
spec:
  tls:
    - hosts:
        - start.home
      secretName: flame-ing-cert
  ingressClassName: nginx
  rules:
  - host: start.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flame
            port:
              number: 5005
